force-app/main/default/objects/Interested_Locations__c/Interested_Locations__c.object-meta.xml
<CustomObject>
    <label>Interested Location</label>
    <nameField>
        <label>Interested Locations Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interested Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>