force-app/main/default/objects/Interested_Locations__c/fields/Interested_Location_Range__c.field-meta.xml
<CustomField>
    <fullName>Interested_Location_Range__c</fullName>
    <label>Interested Location Range</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>