force-app/main/default/objects/Interested_Locations__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity__c</referenceTo>
    <relationshipLabel>Interested Locations</relationshipLabel>
    <relationshipName>Interested_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>