force-app/main/default/objects/Interested_Locations__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Interested_Location_Range__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>